--- a/resume.html
+++ b/resume.html
@@ -119,18 +119,18 @@
       manage confidential projects, and implement scalable solutions for high-growth organizations. Adept at working across multiple time zones,
       managing high-profile clients, and ensuring operational efficiency.
    </p>
-  </header>
-  <nav>
+</header>
+<nav>
    <a href="./index.html">
-    Projects
+      Projects
    </a>
-   <a download="" href="/KMJ_Resume.pdf">
-    Download PDF
+   <a href="KM%20Jones%20Resume.pdf" download>
+      Download PDF
    </a>
-  </nav>
-  <nav style="
-  position: sticky;
-  top: 0;
+</nav>
+<nav style="position: sticky; top: 0;">
+   <!-- Rest of your sticky nav content here -->
+</nav>
   background-color: #ffffff;
   padding: 0.75rem 1rem;
   z-index: 1000;
