--- a/resume.html.html
+++ b/resume.html.html
@@ -124,7 +124,7 @@
    <a href="./index.html">
     Projects
    </a>
-   <a download="" href="/KMJ_Resume.pdf">
+   <a href="KM%20Jones%20Resume.pdf" download>
     Download PDF
    </a>
   </nav>
