--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    </p>
   </header>
   <nav>
-   <a download="" href="/KMJ_Resume.pdf">
+   <a href="KM%20Jones%20EA%20Projects.pdf" download>
     Download PDF
    </a>
    <a href="resume.html">
