--- a/resume.html
+++ b/resume.html
@@ -127,6 +127,7 @@
    <a href="KM%20Jones%20Resume.pdf" download>
     Download PDF
    </a>
+  </header>
   </nav>
   <nav style="
   position: sticky;
