--- a/resume.html
+++ b/resume.html
@@ -265,10 +265,47 @@
       Served as primary gatekeeper for the Co-Founder, managing all scheduling, travel, and high-priority communications.
      </li>
      <li>
+      Responsible for the calendar management, travel, and expenses of the co-founding partner as well as the extended team 
+     </li>
+     <li>
+      Managed Daily schedule and priorities, ensuring smooth travel between appointments and completion of key items
+     </li>
+     <li>
       Developed an internal research repository, compiling SEC filings, investor relations updates, and market insights for partner reviews.
      </li>
      <li>
+      Tracked and organized highly confidential documents on yearly salary adjustments and bonuses for the entire firm
+     </li>
+     <li>
+      Monitored and adjusted travel arrangements for a Private Equity Partner traveling to four different states weekly
+     </li>
+     <li>
+      Anticipated and addressed all visa, passport, Precheck, and international travel needs for several team members
+     </li>
+     <li>
       Designed and led corporate social responsibility initiatives, partnering with local nonprofits to enhance community engagement.
+     </li>
+    </ul>
+    <p>
+     <strong>
+      Executive Assistant to the CEO | Levin Capital Strategies | Aug 2014 - Aug 2017
+     </strong>
+    </p>
+    <ul>
+     <li>
+      Managed CRM with more than 16,000 contacts, maintaining detailed records of each relationship.
+     </li>
+     <li>
+      Oversaw all aspects of the CEO’s personal and professional life, including correspondence with family members.
+     </li>
+     <li>
+      Scheduled and organized all travel arrangements, including private jet requisitions and traveler manifests.
+     </li>
+     <li>
+      Researched, analyzed, and translated complex data into charts and graphs for monthly investor letters.
+     </li>
+     <li>
+      Edited CEO’s letters to editors of The Wall Street Journal, The New York Times, and The Financial Times.
      </li>
     </ul>
    </section>
