--- a/resume.html
+++ b/resume.html
@@ -92,7 +92,8 @@
       margin-top: 0.5rem;
     }
     li {
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.2rem;
+      line-height: 1.4;
     }
   </style>
  </head>
