--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     section:hover { box-shadow: 0 6px 16px rgba(0, 0, 0, 0.07); transform: translateY(-4px); background-color: #f8fafc; }
     h2 { font-family: 'Financier Display', serif; color: var(--accent); font-size: 1.3rem; font-weight: 600; }
     ul { padding-left: 1rem; margin-top: 0.5rem; }
-    li { margin-bottom: 0.4rem; }
+    li { margin-bottom: 0.2rem; line-height: 1.4; }
     a:hover { text-decoration: underline; }
   </style>
  </head>
