--- a/resume.html
+++ b/resume.html
@@ -244,16 +244,25 @@
     </p>
     <ul>
      <li>
-      Orchestrated international board meetings, coordinating C-level executives across multiple time zones.
+      Orchestrated international board meetings, coordinating C-level executives across multiple time zones and managing all onsite logistics.
      </li>
      <li>
-      Led the administrative hiring process, conducting interviews, scheduling meetings, and evaluating candidates.
+      Liaised with CEOs and board members to launch initial meetings for newly formed companies, ensuring cross-functional alignment.
      </li>
      <li>
-      Managed confidential financial records, including salary adjustments, SEC filings, and investment research materials.
+      Led the administrative hiring process, including liaising with recruiters, interviewing candidates, and coordinating with HR.
      </li>
      <li>
-      Chaired executive meetings, tracking action items and ensuring alignment with organizational priorities.
+      Chaired firmwide admin meetings and executive sessions, tracked action items, and distributed minutes to drive follow-through.
+     </li>
+     <li>
+      Managed complex calendars, domestic and international travel, and internal communications for multi-team executive support.
+     </li>
+     <li>
+      Oversaw confidential data and records, including salary adjustments, SEC filings, and investment research materials.
+     </li>
+     <li>
+      Organized investor conferences and high-level client meetings, including panel planning, note-taking, and post-event reporting.
      </li>
     </ul>
     <p>
@@ -263,7 +272,7 @@
     </p>
     <ul>
      <li>
-      Served as primary gatekeeper for the Co-Founder, managing all scheduling, travel, and high-priority communications.
+      Served as primary gatekeeper for the Co-Founder, managing all scheduling, logistics, and high-priority communications.
      </li>
      <li>
       Responsible for the calendar management, travel, and expenses of the co-founding partner as well as the extended team 
