--- a/resume.html
+++ b/resume.html
@@ -222,19 +222,37 @@
     </p>
     <ul>
      <li>
-      Provided support to the investment management team, optimizing calendar management, travel logistics, and high-level client communications.
+      Collaborated with executive team to identify, prioritize, and execute high-impact business needs and strategies.
      </li>
      <li>
-      Developed a firm-wide, integrated Salesforce database, enhancing client scheduling and relationship tracking for increased efficiency.
+      Provided comprehensive support for special projects, including planning, coordination, and team meeting facilitation.
      </li>
      <li>
-      Led cross-functional initiatives, improving operational workflows across Management Committee, Human Capital, and Business Development.
+      Coordinated scheduling for multiple executives, managing calendar flow, agendas, and time-sensitive logistics.
      </li>
      <li>
-      Designed a centralized data repository to measure and analyze diversity recruiting efforts, enabling data-driven decision-making.
+      Oversaw end-to-end travel arrangements for senior leadership, including accommodations, transport, and meal coordination.
      </li>
      <li>
-      Sourced and managed high-profile executive candidates using iCIMS, Greenhouse, and LinkedIn Premium.
+      Tracked, organized, and submitted executive expenses, ensuring accurate reconciliation of all receipts and folios.
+     </li>
+     <li>      
+      Served as point of contact for all Employee Resource Groups, ensuring access to funding, visibility, and internal support.
+     </li>
+     <li>
+      Led calendar planning, content coordination, and execution of firmwide cultural programming across departments.
+     </li>
+     <li>
+      Partnered with key stakeholders across Management Committee, Human Capital, and Business Development teams.
+     </li>
+     <li>
+      Created performance metrics to measure the impact of recruiting efforts and proposed structural improvements.
+     </li>
+     <li>
+      Sourced top-tier analyst and associate candidates using iCIMS, Greenhouse, Handshake, and LinkedIn Premium.
+     </li>
+     <li>      
+      Created yearly budgets and calendars for recruiting partnerships and maintained relationships with 15+ nonprofit partners.
      </li>
     </ul>
     <p>
