--- a/resume.html
+++ b/resume.html
@@ -197,19 +197,40 @@
     </p>
     <ul>
      <li>
-      Supported the CEO and executive leadership, ensuring smooth operations across Los Angeles, London, Hong Kong, Milan, and Tokyo.
+      Provided project coordination and backup EA support to CEO while managing operations for the Asset Backed Finance team.
      </li>
      <li>
-      Built a Salesforce dashboard tracking 9+ months of prospective client engagement data, improving reporting and decision-making.
+      Created prep templates for CEO events and coordinated with internal teams to finalize content for all speaking engagements.
      </li>
      <li>
-      Managed complex international scheduling, booking multi-day executive trips and coordinating global stakeholder meetings.
+      Developed and managed a dynamic spreadsheet for the CEO’s upcoming engagements in collaboration with external stakeholders.
      </li>
      <li>
-      Developed and implemented an automated contract tracking system, ensuring timely counter-signatures and compliance.
+      Coordinated with external project managers, interviewers, and executives to calendar CEO-related events.
      </li>
      <li>
-      Spearheaded cross-functional collaboration between marketing, sales, and IT to streamline internal request processes.
+      Created and maintained a Salesforce dashboard and data profile for ABF, capturing and structuring 9 months of historical client data.
+     </li>
+     <li>
+      Partnered with Engineering Solutions, Sales, and Marketing to ensure CRM data integrity and streamline incoming request workflows.
+     </li>
+     <li>
+      Led cross-functional collaboration on dashboard development, emphasizing conversion tracking and actionable reporting.
+     </li>
+     <li>
+      Managed the ABF distribution request process, ensuring timely delivery, business alignment, and interdepartmental visibility.
+     </li>
+     <li>
+      Coordinated logistics for multi-day international executive travel, including scheduling, bookings, and briefing materials.
+     </li>
+     <li>
+      Oversaw NDA and data room management, tracked contract status, and ensured confidentiality by controlling user access.
+     </li>
+     <li>
+      Acted as proxy on high-volume documentation to expedite data room access and meet external deadlines.
+     </li>
+     <li>
+      Led the hiring process for, trained, and onboarded a new executive assistant, transferring institutional knowledge on team needs.
      </li>
      <li>
       Led the Milken Organizing Committee, overseeing logistics, executive briefings, and VIP scheduling for high-profile industry events.
